# superdev

./: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION.md  LICENSE  Makefile  README.md  docker-compose.yml
examples/: test_api.sh
src/: error.rs  extractors.rs  handlers.rs  main.rs  models.rs  services.rs  utils.rs
